--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "Filterwizard",
-  "description": "Leuke CSS filters voor de hele familie, meme je vrienden, drink een hond.",
+  "description": "Wordt een tovenaar! beep-boep, brandblusser, autisme, dagziens",
   "version": "1.0",
 
   "browser_action": {
@@ -10,7 +10,12 @@
     "default_popup": "popup.html",
     "default_title": "Cast a spell!"
   },
+  "content_scripts": [{
+      "matches": ["<all_urls>"],
+      "js": ["jquery.min.js","functions.js"]
+  }],
   "permissions": [
+    "tabs",
     "activeTab",
     "https://ajax.googleapis.com/"
   ]
